--- a/templates/staff_dashboard.html
+++ b/templates/staff_dashboard.html
@@ -27,35 +27,41 @@
 
 
 <div class="container" style="margin-top: 150px;margin-bottom: 150px;">
+    Add unit
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form}}
+        <button class='btn btn-primary' type="submit">Submit</button>
+    </form>
     <div class="row">
         <div class="col-sm">
             <div style="width: 180px;height: 250px;" class="profile-card-2"><img src="https://images.pexels.com/photos/4969107/pexels-photo-4969107.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img img-fluid">
                 <div style="font-size: 25px;" class="profile-name text-center"><a href="{% url 'units' 'bonded_storage' %}">Bonded <br> Storage</a></div>
-                <div class="profile-username">Booked Units: {{bonded_units.count}}</div>
+                <div class="profile-username">Units: {{bonded_units.count}} <br> Booked:&nbsp;{{booked_bonded_units}}</div>
             </div>
         </div>
         <div class="col-sm">
             <div style="width: 180px;height: 250px;" class="profile-card-2"><img src="https://images.pexels.com/photos/4969107/pexels-photo-4969107.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img img-fluid">
                 <div style="font-size: 25px;" class="profile-name"><a href="">Cold <br> Storage</a></div>
-                <div class="profile-username">Booked Units: {{cold_units.count}}</div>
+                <div class="profile-username">Units: {{cold_units.count}} <br> Booked:&nbsp;{{booked_cold_units}}</div>
             </div>
         </div>
         <div class="col-sm">
             <div style="width: 180px;height: 250px;" class="profile-card-2"><img src="https://images.pexels.com/photos/4969107/pexels-photo-4969107.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img img-fluid">
                 <div style="font-size: 25px;" class="profile-name text-light"><a href="{% url 'units' 'normal_storage' %}">Normal<br>Storage</a></div>
-                <div class="profile-username">Booked Units: {{normal_units.count}}</div>
+                <div class="profile-username">Units: {{normal_units.count}} <br> Booked:&nbsp;{{booked_normal_units}}</div>
             </div>
         </div>
         <div class="col-sm">
             <div style="width: 180px;height: 250px;" class="profile-card-2"><img src="https://images.pexels.com/photos/4969107/pexels-photo-4969107.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img img-fluid">
                 <div style="font-size: 25px;" class="profile-name"><a href="{% url 'units' 'hazardious_storage' %}">Hazardous <br> Storage</a></div>
-                <div class="profile-username">Booked Units: {{hazardious_units.count}}</div>
+                <div class="profile-username">Units: {{hazardious_units.count}} <br> Booked:&nbsp;{{booked_hazardious_units}}</div>
             </div>
         </div>
         <div class="col-sm">
             <div style="width: 180px;height: 250px;" class="profile-card-2"><img src="https://images.pexels.com/photos/4969107/pexels-photo-4969107.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img img-fluid">
                 <div style="font-size: 25px;" class="profile-name"><a href="{% url 'units' 'archive_storage' %}">Archive <br> Storage</a></div>
-                <div class="profile-username">Booked Units: {{archive_units.count}}</div>
+                <div class="profile-username">Units: {{archives_units.count}} <br> Booked:&nbsp;{{booked_archive_units}}</div>
             </div>
         </div>
 
