View transport summary

--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -20,7 +20,7 @@
 </div>  
 
 
-<!-- <div class="container">
+<div class="container">
   <form  action="{% url 'client_register' %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
@@ -29,10 +29,10 @@
     </div>
     <input type="hidden" name="next" value="{{next}}">
 </form>
-</div> -->
+</div>
 
 
-<div class="container-fluid" style="background-color: azure;">
+<!-- <div class="container-fluid" style="background-color: azure;">
   <div class="row justify-content-center">
     <div class="col-11 col-sm-10 col-md-10 col-lg-6 col-xl-5 text-center p-0 mt-3 mb-2">
       <div class="card px-0 pt-4 pb-0 mt-3 mb-3" style="box-shadow: 0px 0px 2px black;">
@@ -42,7 +42,7 @@
           <form method="POST" enctype="multipart/form-data" id="msform">
             {% csrf_token %}
             <!-- progressbar -->
-            <ul id="progressbar">
+            <!-- <ul id="progressbar">
               <li class="active" id="personal"><strong>Personal</strong></li>
               <li id="account"><strong>Account</strong></li>
               <li id="payment"><strong>Contact</strong></li>
@@ -53,7 +53,7 @@
                 aria-valuemax="100"></div>
             </div> <br> <!-- fieldsets -->
             
-            <fieldset>
+            <!-- <fieldset>
               <div class="form-card">
                 <div class="row">
                   <div class="col-7">
@@ -108,7 +108,7 @@
               <input style="margin-top:10px;border-radius: 5px;" type="button" name="next" class="next action-button" value="Next">
               <input style="border-radius: 5px;" style="margin-left: 10px;" type="button" name="previous" class="previous float-left action-button-previous " value="Previous" />
               <!-- <input style="border-radius: 5px;" type="button" name="next" class="next action-button" value="Skip&Submit" /> -->
-            </fieldset>
+            <!-- </fieldset>
             <fieldset>
               <div class="form-card">
                 <div class="row">
@@ -138,7 +138,5 @@
       </div>
     </div>
   </div>
-</div>
-
-
+</div>  -->
 {% endblock %}
