Add distance matrix api to app

--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -1,6 +1,6 @@
 
 {%extends 'base.html'%}
-{% load crispy_forms_tags %}
+{% load mathfilters %}
 {% load static %}
 {% block title %} Request Transport{% endblock %}
 {% block css %}
@@ -26,7 +26,8 @@
                             <p class="card-text"><strong>TYPE OF REQUEST: </strong>{{request_transport.transport_type}}</p>
                             <p class="card-text"><strong>GOODS TO BE TRANSPORTED COUNT: {{request_transport.goods.count}}</strong></p><hr>
                             <h4><strong>Address Details</strong></h4>
-                            <p class="card-text"><strong>ADDRESS: </strong>{{request_transport.address}}</p><hr>
+                            <p class="card-text"><strong>ADDRESS: </strong>{{request_transport.address}}</p>
+                            <p class="card-text"><strong>DISTANCE: </strong>{{request_transport.distance|div:1000}} km</p><hr>
                             <h4><strong>Contact Details</strong></h4>
                             <p class="card-text"><strong>PHONE NUMBER: </strong>{{request_transport.phone_number}}</p>
                             <p class="card-text"><strong>EMAIL: </strong>{{request_transport.user.email}}</p><hr>
