--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -31,7 +31,11 @@
                             <h4><strong>Contact Details</strong></h4>
                             <p class="card-text"><strong>PHONE NUMBER: </strong>{{request_transport.phone_number}}</p>
                             <p class="card-text"><strong>EMAIL: </strong>{{request_transport.user.email}}</p><hr>
+                            {%if request_transport.is_approved == False %}
                             <p class="card-text"><strong>STATUS: <span class="text-danger">PENDING</span> </strong></p>
+                            {%else%}
+                            <p class="card-text"><strong>STATUS: <span class="text-success">APPROVED</span> </strong></p>
+                            {%endif%}
                         </div>
                     </div>
                 </div>
