--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
   {% block styles %}
 
-
+  <link rel="icon" href="/static/images/pool2.png" type="image" sizes="16x16">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
