--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -153,7 +153,7 @@
                 {% endif %}
               </div>
             </li>
-            <li><a href="/" class="nav-link"><strong>?</strong></a></li>
+            <li><a href="" class="nav-link open-button"><strong>?</strong></a></li>
           </ul>
         </nav>
       </div>
@@ -167,3 +167,18 @@
 
 </header>
 
+
+<section id="modal-1" class="modal-container">
+  
+  <div class="modal-dialog" id='modaldg'>    
+    <svg class="modal-svg" id="msvg" viewBox="0 0 100 100" preserveAspectRatio="none">
+      <polygon id='modalpg' class="modal-polygon" />
+    </svg>
+    
+    <div id='modalct' class="modal-content">
+      <h2>I'm a modal</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis excepturi ut inventore consectetur quos rerum quibusdam accusamus, labore itaque assumenda consequatur cum saepe velit quidem ipsa facilis. Repellendus, reiciendis quam?</p>
+    </div>
+    
+  </div>
+</section>
