--- a/templates/footer.html
+++ b/templates/footer.html
@@ -47,7 +47,7 @@
     <div class="row text-center">
       <div class="col-md-12">
         <div class="border-top" style="margin-top:120px;">
-        <p class="copyright text-left pt-4"><small>&copy; <script>document.write(new Date().getFullYear());</script> StoreCentre. All Rights Reserved By.<a href="/" target="_blank">Store.com</a></small></p>
+        <p class="copyright pt-4"><small>&copy; <script>document.write(new Date().getFullYear());</script> StoreCentre. All Rights Reserved By.<a href="/" target="_blank">Store.com</a></small></p>
         </div>
       </div>
       
