--- a/templates/booking.html
+++ b/templates/booking.html
@@ -70,7 +70,7 @@
                                         class="form-label text-info">Check Out Date</span> </div>
                             </div>
                         </div>
-                        <input type="text" id="total_cost">
+                        <span> Total Cost:<input type="text" id="total_cost" value="0.00"></span>
                         <div class="form-btn"> <button style="border-radius: 40px;" class="btn btn-info btn-sm btn-block">Submit</button> </div>
                     </form>
                 </div>
