--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -24,7 +24,7 @@
 
 
 
-<!-- <div class="container-fluid" style="background-color: azure;">
+<div class="container-fluid" style="background-color: azure;">
   <div class="row justify-content-center">
     <div class="col-11 col-sm-10 col-md-10 col-lg-6 col-xl-5 text-center p-0 mt-3 mb-2">
       <div class="card px-0 pt-4 pb-0 mt-3 mb-3" style="box-shadow: 0px 0px 2px black;">
@@ -33,8 +33,8 @@
           <p>Make Sure To Fill All The Form fields</p>
           <form action="{% url 'client_register' %}" method="post" id="msform">
             {% csrf_token %}
-            <!-- progressbar -->
-            <!-- <ul id="progressbar">
+            progressbar 
+            <ul id="progressbar">
               <li class="active" id="personal"><strong>Personal</strong></li>
               <li id="account"><strong>Account</strong></li>
               <li id="payment"><strong>Contact</strong></li>
@@ -43,9 +43,9 @@
             <div class="progress">
               <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0"
                 aria-valuemax="100"></div>
-            </div> <br> <!-- fieldsets -->
+            </div> <br>
             
-            <!-- <fieldset>
+            
               <div class="form-card">
                 <div class="row">
                   <div class="col-7">
@@ -129,5 +129,5 @@
       </div>
     </div>
   </div>
-</div>  -->
+</div> 
 {% endblock %}
