add google keys to env

--- a/templates/client_login.html
+++ b/templates/client_login.html
@@ -61,7 +61,7 @@
                         Login
 
                     </button>
-                    <a href="{% url 'social:begin' 'google-oauth2' %}">Google</a>
+                    <a href="{% url 'social:begin' 'google-oauth2' %}">Sign In With Google</a>
                 </div>
     
                 <div class="text-center p-t-12">
