--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="/static/js/aos.js"></script>
     <script src="/static/js/select2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
     <script src="/static/js/tilt.jquery.min.js"></script>
     <script src="/static/js/jquery.fancybox.min.js"></script>
     <script src="/static/js/jquery.sticky.js"></script>
@@ -121,9 +122,8 @@
 
 
 
-
-
     </script>
+
 
     {% endblock %}
     {% include "footer.html" %}
