--- a/templates/index.html
+++ b/templates/index.html
@@ -140,9 +140,9 @@
       <div class="col-lg-6 ml-auto">
 
         <h2 class="section-title mb-3">Warehousing </h2>
-        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <p>Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque nisi voluptas
-          impedit Quo suscipit omnis iste velit maxime.</p>
+        <p class="lead">Now you can stock closer to your customer than ever before.</p>
+        <p>Now you can stock closer to your customer than ever before — all without costly third party distribution centers. 
+          Better yet, you'll reduce shrinkage and shipping costs!</p><br>
 
         <ul class="list-unstyled ul-check success">
           <li>Placeat maxime animi minus</li>
