--- a/templates/dashboard_with_pivot.html
+++ b/templates/dashboard_with_pivot.html
@@ -22,7 +22,9 @@
     <div class="card-header"><a href="{% url 'employer_profile' %}">See my Profile</a></div> {% endcomment %}
   </div>
 </div>
-<div class="row">
+<button type="button" class="btn btn-primary">
+<a style="border-radius: 50px;" class="text-dark dropdown-item" href="/staff_register/">Register As staff</a></button>
+{% comment %} <div class="row">
   <div class="col-md-12">
     <div class="card ">
       <div class="card-header ">
@@ -151,7 +153,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> {% endcomment %}
   
 {% endblock content %}
 
