styled google auth button

--- a/templates/client_login.html
+++ b/templates/client_login.html
@@ -74,7 +74,7 @@
                 </div>
                 
                 <div class="container text-center">
-                    <a class="text-info" href="{% url 'social:begin' 'google-oauth2' %}"><i class="fa fa-google"></i> Sign In With Google</a>
+                    <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="/static/images/signup/signin-button.png" width="210" alt=""></a>
                 </div>
                 <div class="text-center p-t-16">
                     <p>Don't have an account ? <a class="txt2" href="/client_register/"><strong> SignUp</strong></a></p>
