--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,26 @@
 
   <div class="site-wrap">
     {% include "navbar.html" %}
+
+    {% if messages %}
+    {% for message in messages %}
+    <div class="row pt-5">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <div class="alert text-center {{ message.tags }} alert-dismissible" role="alert" id="messages">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          {{ message }}
+        </div>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+    {% endfor %}
+    {% endif %}
+
     {% block content %}
+
 
     {%endblock%}
 
@@ -85,44 +104,54 @@
       $('.js-tilt').tilt({
         scale: 1.1
       })
-      $(document).ready(function(){
-        Date.prototype.toDateInputValue = (function() {
+      $(document).ready(function () {
+        Date.prototype.toDateInputValue = (function () {
           var local = new Date(this);
           local.setMinutes(this.getMinutes() - this.getTimezoneOffset());
-          return local.toJSON().slice(0,10);
-      });
+          return local.toJSON().slice(0, 10);
+        });
 
-      // calculate diff in days
-      function findDayDifference(departure, arrival) {
-        var date1 = new Date(departure);
-        var date2 = new Date(arrival);
-        // always round down
-        return Math.floor((Math.abs(date2-date1))/(1000*60*60*24));
-      }
-      //set date values to today on load
-       $('#departure_date').val(new Date().toDateInputValue());
-       $('#arrival_date').val(new Date().toDateInputValue());
-       
-       // calculate the total on date change
-        total= function(arrival,departure,charge){
+        // calculate diff in days
+        function findDayDifference(departure, arrival) {
+          var date1 = new Date(departure);
+          var date2 = new Date(arrival);
+          // always round down
+          return Math.floor((Math.abs(date2 - date1)) / (1000 * 60 * 60 * 24));
+        }
+        //set date values to today on load
+        $('#departure_date').val(new Date().toDateInputValue());
+        $('#arrival_date').val(new Date().toDateInputValue());
+
+        // calculate the total on date change
+        var charge = 0;
+        $("#storage_type").change(function () {
+            var element = $(this).find('option:selected');
+            charge = element.attr("charge");
+          });
+          
+
+        total = function () {
+         
           var departure = $('#departure_date').val();
           var arrival = $('#arrival_date').val();
-          var charge = 100;
-          no_of_days = findDayDifference(departure,arrival)
-          total_cost = no_of_days * charge;
+          
+          var units = $('#no_of_units').val();
+          console.log(charge);
+
+        
+          console.log(units);
+          no_of_days = findDayDifference(departure, arrival)
+          total_cost = no_of_days * charge * units;
           $('#total_cost').attr('value', total_cost
-        
-        );
+
+
+          );
+
         }
-        
+
 
 
       });
-
-
-
-
-
     </script>
 
     {% endblock %}
